iniciando semantic html

--- a/index.html
+++ b/index.html
@@ -7,49 +7,65 @@
   <title>dev.finance$</title>
 </head>
 
-<body>
-  <h1>dev.finance$</h1>
-  <h2>Balanço</h2>
-  <h3>Entradas</h3>
-  <p>R$ 5.000,00</p>
+<body> 
+  <header>
+    <h1>dev.finance$</h1>
+  </header>
 
-  <h3>Saídas</h3>
-  <p>R$ 3.000,00</p>
+  <main>
+    <section>
+      <h2>Balanço</h2>
+      <h3>Entradas</h3>
+      <p>R$ 5.000,00</p>
 
-  <h3>Total</h3>
-  <p>R$ 8.000,00</p>
-  <h2>Transações</h2>
+      <h3>Saídas</h3>
+      <p>R$ 3.000,00</p>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Descrição</th>
-        <th>Valor</th>
-        <th>Data</th>
-      </tr>
-    </thead>
+      <h3>Total</h3>
+      <p>R$ 8.000,00</p>
+      
+    </section>
+    <section>
+      <h2>Transações</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Descrição</th>
+            <th>Valor</th>
+            <th>Data</th>
+          </tr>
+        </thead>
+  
+        <tbody>
+          <tr>
+            <td>Luz</td>
+            <td>-R$500,00</td>
+            <td>23/01/2021</td>
+          </tr>
+          <tr>
+            <td>criação de Website</td>
+            <td>R$5.000,00</td>
+            <td>23/01/2021</td>
+          </tr>
+          <tr>
+            <td>internet</td>
+            <td>-R$200,00</td>
+            <td>23/01/2021</td>
+           </tr>
+        </tbody>
+      </table>
 
-    <tbody>
-      <tr>
-        <td>Luz</td>
-        <td>-R$500,00</td>
-        <td>23/01/2021</td>
-      </tr>
-      <tr>
-        <td>criação de Website</td>
-        <td>R$5.000,00</td>
-        <td>23/01/2021</td>
-      </tr>
-      <tr>
-        <td>internet</td>
-        <td>-R$200,00</td>
-        <td>23/01/2021</td>
+    </section>
+ 
+  </main>
+  <footer>
+    <p>Dev.Finance$</p>
+  </footer>
 
 
-      </tr>
-    </tbody>
-  </table>
-  <p>Dev.Finance$</p>
+
+
+
 </body>
 
 </html>
