--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>dev.finance$</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,8 +15,8 @@
     <h1 id="logo">dev.finance$</h1>
   </header>
 
-  <main>
-    <section id="balansce">
+  <main class="container">
+    <section id="balance">
       <h2>Balanço</h2>
 
       <div class="card">
@@ -26,7 +29,7 @@
         <p>R$ 3.000,00</p>
       </div>
 
-      <div class="card">
+      <div class="card total">
         <h3>Total</h3>
         <p>R$ 8.000,00</p>
       </div>
@@ -46,19 +49,19 @@
 
         <tbody>
           <tr>
-            <td>Luz</td>
-            <td>-R$500,00</td>
-            <td>23/01/2021</td>
+            <td class="description">Luz</td>
+            <td class="expense"> -R$500,00</td>
+            <td class="date">23/01/2021</td>
           </tr>
           <tr>
-            <td>criação de Website</td>
-            <td>R$5.000,00</td>
-            <td>23/01/2021</td>
+            <td class="description">criação de Website</td>
+            <td class="income">R$5.000,00</td>
+            <td class="date">23/01/2021</td>
           </tr>
           <tr>
-            <td>internet</td>
-            <td>-R$200,00</td>
-            <td>23/01/2021</td>
+            <td class="description">internet</td>
+            <td class="expense"> -R$200,00</td>
+            <td class="date">23/01/2021</td>
           </tr>
         </tbody>
       </table>
@@ -69,11 +72,6 @@
   <footer>
     <p>Dev.Finance$</p>
   </footer>
-
-
-
-
-
 </body>
 
 </html>
